# azure-functions-rust-wasm

./: .gitignore  build.sh  package-lock.json  package.json
HttpTrigger/: index.js
native/: Cargo.toml
native/src/: lib.rs
src/example-rust-azure-function/: package-lock.json  package.json
src/example-rust-azure-function/HttpTrigger/: index.js
src/example-rust-azure-function/NodeMatrixMultiplier/: index.js
src/example-rust-azure-function/RustMatrixMultiplier/: index.js
src/rust-npm/: Cargo.toml  LICENSE_MIT
src/rust-npm/src/: lib.rs
src/rust-npm/tests/: web.rs
