[package]
name = "neon-funcy-stuff"
version = "0.1.0"
authors = ["DeepBass <daniel.bass.2018@outlook.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_funcy_stuff"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
